<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#fff"
        android:gravity="left|center_vertical|center_horizontal|center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/sw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="ID :~..."
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageButton
            android:id="@+id/d_sendMsg"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_message_contact" />

        <ImageButton
            android:id="@+id/d_call"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_action_call" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="top|center_vertical|center_horizontal|center"
                android:gravity="center"
                android:text="@string/tch"
                android:textColor="#0b81b8"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="#0d94c7"
                android:textSize="65sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="3dp"
                android:gravity="left|center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    app:srcCompat="@mipmap/temperature" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="Celcius"
                    android:textColor="#0d94c7"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="top|center_vertical|center_horizontal|center"
                android:gravity="center"
                android:text="@string/fc"
                android:textColor="#b8092a"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="#9c061c"
                android:textSize="65sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="3dp"
                android:gravity="left|center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    app:srcCompat="@mipmap/heart_rates" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="BPM"
                    android:textColor="#c70d42"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_show" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="top|center_vertical|center_horizontal|center"
                android:gravity="center"
                android:text="@string/emo"
                android:textColor="#ffb300"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="#e4b504"
                android:textSize="65sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="3dp"
                android:gravity="left|center_vertical|center_horizontal|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_state"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_action_happy" />

                <TextView
                    android:id="@+id/emo_state"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Positif"
                    android:textColor="#ffb300"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="top|center_vertical|center_horizontal|center"
                android:gravity="center"
                android:text="@string/edp"
                android:textColor="#3949ab"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgAlert"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="2dp"
                    android:src="@mipmap/bon_etat" />

                <LinearLayout
                    android:id="@+id/layout_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="1dp"
                    android:background="#f30856"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/t4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left|center_vertical|center_horizontal|center"
                        android:padding="2dp"
                        android:text="@string/alert"
                        android:textColor="#eee" />

                    <Button
                        android:id="@+id/btn_alert_ok"
                        android:layout_width="50dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:text="OK" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
